--- a/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/src/TestDiSistema/main.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/src/TestDiSistema/main.tex
@@ -1,4 +1,5 @@
 I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua interezza, portando alla luce eventuali problematiche sulle parti del codice sviluppate da altri sviluppatori.
+\newpage
 {
     \rowcolors{2}{\evenRowColor}{\oddRowColor}
     \renewcommand{\arraystretch}{1.5}
@@ -66,7 +67,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
              Al dipendente viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item accedere alla pagina di Login;
+            \item accedere alla pagina di login;
             \item inserire l'indirizzo e-mail;
             \item inserire la password.
         \end{itemize}&
@@ -89,7 +90,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
 
         TS3.1&
         \begin{flushleft}
-            Il dipendente deve essere verificare lo stato di una postazione tramite la scannarizzazione del tag RFID.\newline
+            Il dipendente deve verificare lo stato di una postazione tramite la scannarizzazione del tag RFID.\newline
             Al dipendente viene chiesto di:
         \end{flushleft}
         \begin{itemize}
@@ -98,8 +99,8 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             \item appoggiare il telefono al tag RFID;
             \item verificare la corretta scannerizzazione del tag RFID;
             \item [] oppure
-            \item visualizzazione dell'errore della scannerizzazione non avvenuta correttamente.
-            \item verificare lob stato della postazione.
+            \item visualizzazione dell'errore relativo alla scannerizzazione non avvenuta correttamente.
+            \item verificare lo stato della postazione.
         \end{itemize}&
         NI\\
 
@@ -110,11 +111,11 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             Al dipendente viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione di creazione di una prenotazione;
+            \item navigare nell'apposita sezione di creazione di una prenotazione;
             \item verificare che sia possibile creare una prenotazione specificando data e ora;
             \item verificare che la prenotazione passi ad uno stato di "pending";
             \item verificare che la prenotazione venga confermata.
-            \item [] OPPURE
+            \item [] oppure
             \item verificare che la prenotazione venga eliminata per un motivo specificato.
         \end{itemize}&
         NI\\
@@ -125,7 +126,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             Al dipendente viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione di modifica di una prenotazione;
+            \item navigare nell'apposita sezione di modifica di una prenotazione;
             \item verificare che sia possibile modificare una prenotazione specificando una nuova data e ora;
             \item verificare che la prenotazione passi ad uno stato di "pending";
             \item verificare che la prenotazione venga conferamta.
@@ -140,7 +141,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             Al dipendente viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione di cancellazione di una prenotazione;
+            \item navigare nell'apposita sezione di cancellazione di una prenotazione;
             \item verificare che sia possibile eliminare una prenotazione effettuata in precedenza per una specifica data e ora;
             \item verificare che la prenotazione venga eliminata.
         \end{itemize}&
@@ -152,7 +153,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             Al dipendente viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione di visualizzazione delle prenotazioni;
+            \item navigare nell'apposita sezione di visualizzazione delle prenotazioni;
             \item verificare che siano elencate correttamente tutte le sue prenotazioni.
         \end{itemize}&
         NI\\
@@ -163,9 +164,9 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             Al dipendente viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione di visualizzazione delle prenotazioni;
+            \item navigare nell'apposita sezione di visualizzazione delle prenotazioni;
             \item verificare che siano elencate correttamente tutte le sue prenotazioni attive.
-            \item [] OPPURE
+            \item [] oppure
             \item verificare che sia visualizzato un messaggio di errore indicando che non esistono prenotazioni attive.
         \end{itemize}&
         NI\\
@@ -176,7 +177,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             Al dipendente viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione di creazione di una prenotazione;
+            \item navigare nell'apposita sezione di creazione di una prenotazione;
             \item verificare che sia possibile creare una prenotazione specificando data e ora;
             \item verificare che la prenotazione passi ad uno stato di "pending";
             \item verificare che la prenotazione non venga effettuata.
@@ -189,7 +190,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             All'amministratore viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione di gestione delle postazioni;
+            \item navigare nell'apposita sezione di gestione delle postazioni;
             \item verificare che possa gestire le postazioni a cui ha accesso e verificarne lo stato.
         \end{itemize}&
         NI\\
@@ -200,7 +201,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             All'amministratore viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item accedere alla pagina di Login;
+            \item accedere alla pagina di login;
             \item inserire l'indirizzo e-mail;
             \item inserire la password.
         \end{itemize}&
@@ -212,7 +213,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             All'amministratore viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione e selezionare il tipo di postazione;
+            \item navigare nell'apposita sezione e selezionare il tipo di postazione;
             \item inserire i dati richiesti;
             \item confermare l'avvenuta creazione della postazione.
         \end{itemize}&
@@ -224,7 +225,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             All'amministratore viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione e selezionare il tipo di postazione come stanza;
+            \item navigare nell'apposita sezione e selezionare la funzionalità di creazione di una nuova stanza;
             \item inserire il codice della stanza;
             \item verificare che non ci siano messaggi di errore;
             \item confermare la creazione della stanza.
@@ -238,7 +239,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             All'amministratore viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione e selezionare il tipo di postazione;
+            \item navigare nell'apposita sezione e selezionare il tipo di postazione;
             \item inserire i dati richiesti;
             \item confermare l'avvenuta modifica della postazione.
         \end{itemize}&
@@ -250,7 +251,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             All'amministratore viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione e selezionare la stanza da modificare;
+            \item navigare nell'apposita sezione e selezionare la stanza da modificare;
             \item premere il pulsante modifica;
             \item inserire i nuovi dati;
             \item verificare che non ci siano messaggi di errore per la modifica;
@@ -265,7 +266,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             All'amministratore viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione e selezionare il tipo di postazione;
+            \item navigare nell'apposita sezione e selezionare il tipo di postazione;
             \item eliminare la postazione;
             \item confermare l'eliminazione della postazione;
             \item verificare l'avvenuta eliminazione della postazione.
@@ -278,7 +279,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             All'amministratore viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione e selezionare la stanza da eliminare;
+            \item navigare nell'apposita sezione e selezionare la stanza da eliminare;
             \item premere il pulsante elimina;
             \item verificare che non ci siano messaggi di errore per la modifica;
             \item confermare l'eliminazione della stanza;
@@ -292,7 +293,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             All'amministratore viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione e selezionare il tipo di postazione;
+            \item navigare nell'apposita sezione e selezionare il tipo di postazione;
             \item disabilitare la postazione;
             \item confermare la disabilitazione della postazione;
             \item verificare l'avvenuta disabilitazione della postazione;
@@ -306,8 +307,8 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             All'amministratore viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione e selezionare la stanza da disabilitare;
-            \item premere il pulsante disabilitare;
+            \item navigare nell'apposita sezione e selezionare la stanza da disabilitare;
+            \item premere il relativo pulsante di disabilitazione della stanza;
             \item verificare che non ci siano messaggi di errore per la modifica;
             \item confermare la disabilitazione della stanza;
             \item verificare l'avvenuta disabilitazione della stanza;
@@ -322,8 +323,8 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             All'amministratore viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione di gestione delle postazioni;
-            \item marcare la postazione disabilitata desiderata come abilitata;
+            \item navigare nell'apposita sezione di gestione delle postazioni;
+            \item marcare la postazione precedentemente disabilitata come abilitata;
             \item verificare che la postazione sia ora prenotabile e servibile.
         \end{itemize}&
         NI\\
@@ -334,7 +335,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             All'amministratore viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione di gestione delle postazioni;
+            \item navigare nell'apposita sezione di gestione delle postazioni;
             \item selezionare il monitoraggio in tempo reale;
             \item visualizzare la presenza delle persone all'interno della stanza.
         \end{itemize}&
@@ -346,10 +347,10 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             All'amministratore viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item navigare all'apposita sezione di gestione degli utenti;
+            \item navigare nell'apposita sezione di gestione degli utenti;
             \item aprire la barra di ricerca;
             \item inserire i dati dell'utente;
-            \item visualizzare lon storico dell'utente.
+            \item visualizzare lo storico dell'utente.
         \end{itemize}&
         NI\\
 
@@ -359,7 +360,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             All'igienizzatore viene chiesto di:
         \end{flushleft}
         \begin{itemize}
-            \item accedere alla pagina di Login;
+            \item accedere alla pagina di login;
             \item inserire l'indirizzo e-mail;
             \item inserire la password.
         \end{itemize}&
@@ -392,12 +393,12 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
 
         TS15.1&
         \begin{flushleft}
-            L'igienizzatore deve essere in grado marcare la stanza come igienizzata tramite la scannarizzare del tag RFID.
+            L'igienizzatore deve essere in grado marcare la stanza come igienizzata tramite la scannerizzazione del tag RFID.
             All'igienizzatore viene chiesto di:
         \end{flushleft}
         \begin{itemize}
             \item accedere alla pagina dedicata;
-            \item selezionare la scannerizzazione;
+            \item selezionare la funzionalità di scannerizzazione;
             \item appoggiare il telefono al tag RFID;
             \item verificare la corretta scannerizzazione del tag RFID;
             \item confermare l'igienizzazione della stanza;
@@ -426,7 +427,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         \end{flushleft}
         \begin{itemize}
             \item accedere alla pagina dedicata;
-            \item selezionare la scannerizzazione;
+            \item selezionare la funzionalità di scannerizzazione;
             \item appoggiare il telefono al tag RFID;
             \item verificare la corretta scannerizzazione del tag RFID;
             \item confermare l'igienizzazione della postazione;
@@ -441,7 +442,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         \end{flushleft}
         \begin{itemize}
             \item marcare la postazione come "sporca";
-            \item rendere la postazione prenotabile ma da pulire.
+            \item rendere la postazione prenotabile ma da igienizzare.
         \end{itemize}&
         NI\\
 
