--- a/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/src/TestDiSistema/main.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/src/TestDiSistema/main.tex
@@ -130,7 +130,7 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             \item verificare che sia possibile modificare una prenotazione specificando una nuova data e ora;
             \item verificare che la prenotazione passi ad uno stato di "pending";
             \item verificare che la prenotazione venga conferamta.
-            \item [] OPPURE
+            \item [] oppure
             \item verificare che la prenotazione venga rifiutata per un errore specificato.
         \end{itemize}&
         NI\\
